last fixes hometask

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root{
-    --header-bg-color:#FFFFFF;
+    --white-bg-color:#FFFFFF;
     --header-bd-color:  #ECECEC;
     --sections-bg-color:#2F303A;
     --features-works-bg-color: #F5F5F5;
@@ -91,14 +91,14 @@ img{
 .portfolio-button:hover,
 .portfolio-button:focus{
 background-color: var(--accent-color);
-color: var(--header-bg-color);
+color: var(--white-bg-color);
 }
 
 /* HEADER */
 
 .page-header{
-    background-color: var(--header-bg-color);
-    border: 1px solid var(--header-bd-color);
+    background-color: var(--white-bg-color);
+    border: 1px solid var(--white-bg-color);
 }
 .header-container{
     display: flex;
@@ -160,7 +160,7 @@ color: var(--header-bg-color);
 }
 /* HERO */
 .hero{
-    background-color: var(--sections-bg-color);
+    background-color: var(--white-bg-color;
 }
 .container-hero{
     padding-top: 200px;
@@ -184,7 +184,7 @@ color: var(--header-bg-color);
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-    color: var(--header-bg-color);
+    color: var(--white-bg-color);
 }
 .hero-button{
     padding-left: 32px;
@@ -204,11 +204,11 @@ color: var(--header-bg-color);
     letter-spacing: 0.06em;
     border: 0px;
     background-color: var(--accent-color);  
-    color: var(--header-bg-color);
+    color: var(--white-bg-color);
 }
 /* FEATURES */
 .features{
-    background-color: var(--features-works-bg-color);
+    background-color: var(--white-bg-color);
 }
 .features-nav{
     display: flex;
@@ -243,7 +243,8 @@ color: var(--header-bg-color);
 .no-padding{
     padding-top: 0px;
 }
-.works-title{
+.works-title,
+.team-name{
     margin-bottom: 50px;
     font-size: 36px;
     line-height: 1.166;
@@ -265,14 +266,14 @@ color: var(--header-bg-color);
 }
 .team-menu > .item {
     width: 270px;
-    background-color: var(--header-bg-color);
+    background-color: var(--white-bg-color);
 
     border-radius: 0px 0px 4px 4px;
     text-align: center;
-
 }
-.team-photo{
-    margin-bottom: 30px;
+.team-padding-30{
+    padding-top: 30;
+    padding-bottom: 30;
 }
 .team-title{
     margin-bottom: 10px;
@@ -281,7 +282,7 @@ color: var(--header-bg-color);
     line-height: 1.187;
 }
 .team-position{
-    padding-bottom: 30px;
+    
 
     font-weight: 400;
     font-size: 16px;
@@ -320,10 +321,10 @@ color: var(--header-bg-color);
     margin-bottom: 9px;
 }
 .footer-logo > .footer-studio{
-    color: var(--header-bg-color);
+    color: var(--white-bg-color);
 }
 .page-footer .footer-address{
-    color: var(--header-bg-color);
+    color: var(--white-bg-color);
 }
 
 /* PORTFOLIO - MAIN  */
@@ -364,6 +365,9 @@ color: var(--header-bg-color);
     margin-bottom: 20px;
    
 }
+.portfolio-title-text{
+    padding-left: 24px;
+}
 .portfolio-title{
     margin-bottom: 4px;
     
@@ -392,5 +396,10 @@ color: var(--header-bg-color);
 .portfolio-list > .item{
     width: calc((100% - 30px * 2)/3);
     border: 1px solid var(--border-color);
-    background-color: var(--header-bg-color);
+    background-color: var(--white-bg-color);
+}
+
+
+.portfolio-title-text{
+    padding-left: 24px;
 }
